<?xml version="1.0"?>
<package>
  <name>zahlil</name>
  <version>0.1.0</version>
  <description>The zahlil robot by or</description>

  <maintainer email="ortslil64@gmail.com">Or Tslil</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>   <!-- Compilation Library -->
  <build_depend>geometry_msgs</build_depend>    <!-- Transfering Geometry Type Messages Library -->
  <build_depend>gazebo_ros</build_depend>	<!-- Gazebo Library -->
  <build_depend>roscpp</build_depend>		<!-- Ros Library -->
  <build_depend>tf</build_depend>		<!-- Transformation Library -->
  <build_depend>std_msgs</build_depend>		<!-- Transfering Standard Type Messages Library -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
 

<export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
</export>
</package>
